# test-grpc

./: .gitignore  CMakeLists.txt  README.md  client.cc  generate_proto.sh  server.cc  task_build.sh  task_dogcat.sh  task_num.sh  test_grpc.py
PredictionClient/: CMakeLists.txt  PredictionClient.cc  PredictionClient.h
proto/: CMakeLists.txt  route_guide.grpc.pb.cc  route_guide.grpc.pb.h  route_guide.pb.cc  route_guide.proto
proto/tensorflow_serving/apis/: classification.grpc.pb.cc  classification.grpc.pb.h  classification.pb.cc  classification.pb.h  get_model_metadata.grpc.pb.cc  get_model_metadata.grpc.pb.h  get_model_metadata.pb.cc  get_model_metadata.pb.h  get_model_status.grpc.pb.cc  get_model_status.grpc.pb.h  get_model_status.pb.cc  get_model_status.pb.h  inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  input.grpc.pb.cc  input.grpc.pb.h  input.pb.cc  input.pb.h  logging.grpc.pb.cc  logging.grpc.pb.h  logging.pb.cc  logging.pb.h  model.grpc.pb.cc  model.grpc.pb.h  model.pb.cc  model.pb.h  model_management.grpc.pb.cc  model_management.grpc.pb.h  model_management.pb.cc  model_management.pb.h  model_service.grpc.pb.cc  model_service.grpc.pb.h  model_service.pb.cc  model_service.pb.h  predict.grpc.pb.cc  predict.grpc.pb.h  predict.pb.cc  predict.pb.h  (+20 more)
proto/tensorflow_serving/config/: file_system_storage_path_source.grpc.pb.cc  file_system_storage_path_source.grpc.pb.h  file_system_storage_path_source.pb.cc  file_system_storage_path_source.pb.h  log_collector_config.grpc.pb.cc  log_collector_config.grpc.pb.h  log_collector_config.pb.cc  log_collector_config.pb.h  logging_config.grpc.pb.cc  logging_config.grpc.pb.h  logging_config.pb.cc  logging_config.pb.h  model_server_config.grpc.pb.cc  model_server_config.grpc.pb.h  model_server_config.pb.cc  model_server_config.pb.h  monitoring_config.grpc.pb.cc  monitoring_config.grpc.pb.h  monitoring_config.pb.cc  (+9 more)
proto/xla/: autotune_results.grpc.pb.cc  autotune_results.grpc.pb.h  autotune_results.pb.cc  autotune_results.pb.h  autotuning.grpc.pb.cc  autotuning.grpc.pb.h  autotuning.pb.cc  autotuning.pb.h  xla.grpc.pb.cc  xla.grpc.pb.h  xla.pb.cc  xla.pb.h  xla_data.grpc.pb.cc  xla_data.grpc.pb.h  xla_data.pb.cc  xla_data.pb.h
(+287 files in other folders)
